# Agri-Sense

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  agri-sense-build-prompts.md  conftest.py  pyproject.toml  script.txt  vercel.json
.claude/: settings.local.json
.pytest_cache/v/cache/: lastfailed  nodeids
.ruff_cache/0.15.12/: 8372680361861860672  8663595126169819755
app/: .env.local.example  README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
app/app/: globals.css  layout.tsx  page.tsx
app/app/market/: page.tsx
app/components/: RecommendPanel.tsx  VietnamMap.tsx
app/lib/: api.ts
data/processed/: classifier.pkl  classifier_calibrated.pkl  classifier_meta.json  feature_columns.json  regressor.pkl  regressor_meta.json  scaler.pkl  scaler_params.json  training.parquet
data/raw/gso/: yields.csv
data/raw/market/: prices.csv
data/raw/soilgrids/: 10.0341_105.788.json  10.05_105.55.json  10.5200_105.1500.json  10.6_105.48.json  11.32_107.18.json  11.7200_108.2000.json  12.6797_108.0377.json  12.95_108.18.json  13.7700_107.8900.json  15.7200_108.1000.json  (+5 more)
scripts/: bootstrap.py  build_dataset.py  demo_ndvi.py  demo_predict.py  demo_soil.py  demo_weather.py  process.py  serve.py  train.py
src/agri_sense/: __init__.py
tests/: test_crops.py  test_farm_plan.py  test_fertiliser.py  test_gso_yields.py  test_market_prices.py  test_nasa_power.py  test_price_forecast.py  test_seasons.py  test_sentinel.py  test_soilgrids.py
tests/models/: test_models.py
tests/processing/: test_impute.py  test_normalise.py
(+31 files in other folders)
