[project]
name = "agri-sense"
version = "0.1.0"
description = "MVP crop recommendation system for Vietnamese farmers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32",
    "httpx>=0.27",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "pyarrow>=16.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "geopandas>=0.14",
    "shapely>=2.0",
    "rasterio>=1.3",
    "pystac-client>=0.8",
    "planetary-computer>=1.0",
    "tenacity>=8.3",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
    "mypy>=1.10",
    "ipykernel>=6.29",
    "tqdm>=4.66",
    "matplotlib>=3.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agri_sense"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: live network call to an external API",
    "slow: slow tests (live network, not run in normal CI)",
]
